@@ -817,8 +817,12 @@ USECODE_INTRINSIC(click_on_item)
 
 					// Special case for weapon hit:
 	} else if (event == weapon && caller_item)
-		{
-		obj = caller_item;
+		{			// First choice:  NPC's target.
+		Actor *npc = as_actor(caller_item);
+		if (npc && npc->get_target())
+			obj = npc->get_target();
+		else			// Not sure about this:
+			obj = caller_item;
 		t = obj->get_tile();
 		}
 	else
